Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/TriggerActionBinding__mdt.object-meta.xml
<CustomObject>
    <description>Registers one TriggerAction handler class for one SObject and trigger context, with an explicit execution order. TriggerActionDispatcher reads these records instead of any package owning its own trigger, so multiple packages can add logic to the same object without an undefined execution order or a hardcoded dependency on each other.</description>
    <label>Trigger Action Binding</label>
    <pluralLabel>Trigger Action Bindings</pluralLabel>
</CustomObject>