Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/Apex_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_Name__c</fullName>
    <description>Name of the handler class TriggerActionDispatcher should instantiate via Type.forName(), e.g. AccountNameNormalizer. For a class contributed by another installed package, include its namespace, e.g. pkgA.AccountNameNormalizer.</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>