Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free-text note on what this handler does and which package or feature owns it - the registry is shared across packages, so this is often the only place that ownership is written down.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>