Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/Is_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, TriggerActionDispatcher skips this binding entirely - an admin kill switch that doesn't require touching the handler class or the trigger.</description>
    <label>Is Disabled</label>
    <type>Checkbox</type>
</CustomField>