Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Execution order among every handler registered for the same SObject and Trigger Context, ascending. Two packages both acting on Account Before Insert run in the order declared here, not in the order they happened to deploy.</description>
    <label>Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>