Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>API name of the object this handler runs against, e.g. Account. Must match the SObjectType passed to TriggerActionDispatcher.run() from that object's trigger.</description>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>