Triggers/force-app/main/default/objects/TriggerActionBinding__mdt/fields/Trigger_Context__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Context__c</fullName>
    <description>Which trigger phase this handler runs in. Must match one of TriggerAction's interfaces on the handler class (e.g. Before Update requires the class to implement TriggerAction.BeforeUpdate).</description>
    <label>Trigger Context</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BEFORE_INSERT</fullName>
                <label>Before Insert</label>
            </value>
            <value>
                <fullName>BEFORE_UPDATE</fullName>
                <label>Before Update</label>
            </value>
            <value>
                <fullName>BEFORE_DELETE</fullName>
                <label>Before Delete</label>
            </value>
            <value>
                <fullName>AFTER_INSERT</fullName>
                <label>After Insert</label>
            </value>
            <value>
                <fullName>AFTER_UPDATE</fullName>
                <label>After Update</label>
            </value>
            <value>
                <fullName>AFTER_DELETE</fullName>
                <label>After Delete</label>
            </value>
            <value>
                <fullName>AFTER_UNDELETE</fullName>
                <label>After Undelete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>